# femapi

./: .env  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  Dockerfile.builder  README.md  Rocket.toml
.github/workflows/: rust.yml
migrations/2018-10-11-185553_create_users/: up.sql
migrations/2018-10-22-010325_create_projects/: up.sql
migrations/2018-10-22-011155_create_members/: up.sql
src/: auth.rs  filestore.rs  graphql.rs  lib.rs  main.rs  router.rs  schema.rs  server_error.rs  static_file.rs
src/api/: auth.rs  graphql.rs  home.rs  mod.rs
src/db/: mod.rs  models.rs  schema.rs
src/handler/: member.rs  mod.rs  project.rs  user.rs
src/middleware/: authenticator.rs  mod.rs  request_logger.rs
src/model/: db.rs  graphql.rs  member.rs  mod.rs  project.rs  response.rs  user.rs
src/share/: common.rs  gql_schema.rs  mod.rs  schema.rs  state.rs
