[package]
name = "femapi"
version = "0.1.0"
authors = ["Eduardo Braun <eduardo@rushers.org>"]
edition = "2018"

[dependencies]
diesel = { version = "1.3.3", features = ["sqlite"] }
r2d2 = "0.8.2"
r2d2-diesel = "1.0.0"
dotenv = "0.13"
juniper = "0.10"
serde = "1.0.9"
serde_derive = "1.0.9"
serde_json = "1.0.9"
juniper_codegen = "0.10"
rocket = "0.3.17"
rocket_codegen = "0.3.17"
rocket_contrib = "0.3.17"
rocket_cors = "0.3.0"
juniper_rocket = "0.1.3"
bcrypt = "0.2"
frank_jwt = {git = "https://github.com/GildedHonour/frank_jwt"}
