[package]
name = "femapi"
version = "0.1.0"
authors = ["Eduardo Braun <eduardo@rushers.org>"]
edition = "2018"
build = "build.rs"

[dependencies]
diesel = { version = "1.3.3", features = ["postgres", "uuid", "r2d2", "chrono", "serde_json"] }
diesel_migrations = "1.3.0"
postgres = {version= "^0.15.0", features = ["with-chrono"]}
chrono = { version = "0.4", features = ["serde"] }
actix-web = "^0.7"
http = "^0.1.0"
num_cpus = "1.0"
r2d2 = "0.8.2"
r2d2-diesel = "1.0.0"
# TODO: Lower the threshold to warn and remove trace after things are working
slog = { version = "^2.4.1", features = ["max_level_trace", "release_max_level_debug"] }
slog-async = "^2.3.0"
slog-envlogger = "^2.1.0"
slog-json = "^2.2.0"
slog-atomic = "^2.0.0"
slog-term = "^2.4.0"
slog-stream = "^1.2.1"
futures = "^0.1"
dotenv = "0.13"
juniper = "0.10"
serde = "1.0.9"
serde_derive = "1.0.9"
serde_json = "1.0.9"
juniper_codegen = "0.10"
bcrypt = "0.2"
jsonwebtoken = "^5.0.1"
walkdir = "2"
grounded_path = {git = "https://gitlab.com/etb/grounded_path"}
uuid = { version = "0.6.5", features = ["serde", "v4"] }
